avance en app version 1.1

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -33,7 +33,7 @@
             </div>
             <div class="modal-body">
             <form action="/new-task" method="post">
-                <label for="">Titulo</label>
+                <label for="description">Titulo</label>
                 <input type="text" class="form-control mb-3" name="title">
                 <label for="description">Descripción</label>
                 <textarea name="description" id="description"  rows="5" class="form-control mb-3"></textarea>
@@ -60,8 +60,8 @@
                         <input type="text" class="form-control mb-3" name="name">
                     </div>
                     <div class="col-6">
-                        <label for="surname">Apellido</label>
-                        <input type="text" class="form-control mb-3" name="surname">
+                        <label for="surnames">Apellidos</label>
+                        <input type="text" class="form-control mb-3" name="surnames">
                     </div>
                     <div class="col-6">
                         <label for="email">Email</label>
