cerca de terminarla

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -21,6 +21,33 @@
                 <img src="{{url_for('static', filename='images/user-plus-solid.svg')}}" width="25" class="mx-auto d-block"  data-bs-toggle="modal" data-bs-target="#user-modal">
             </div>
         </div>
+
+
+        <!-- TASKS -->
+        <div class="row row-col-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 mt-3">
+            {% for task in tasks %}
+
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-heard">
+                            {{task.title}}
+                        </div>
+                        <div class="card-body">
+                            {{task.description}}
+                        </div>
+                        <div class="card-footer d-flex justify-content-between">
+                            {{task.date_task}}
+                            <form action="/delete-task" method="post">
+                                <input type="hidden" value="{{task.id}}" name="id">
+                                <button type="submit" class="btn btn-outline-danger btn-sm">Eliminar</button>
+                            </form>
+                        </div>
+                    </div>
+
+                </div>
+
+            {% endfor %}
+        </div>
     </div>
 
     <!--Tasks Modal -->
