--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -24,10 +24,10 @@
 
 
         <!-- TASKS -->
-        <div class="row row-col-1 row-cols-sm-1 row-cols-md-3 row-cols-lg-4 mt-3">
+        <div class="row row-col-1 row-cols-sm-1 row-cols-md-5 row-cols-lg-4 mt-5">
             {% for task in tasks %}
 
-                <div class="col-md-3">
+                <div class="col-md-7">
                     <div class="card">
                         <div class="card-heard">
                             {{task.title}}
@@ -40,6 +40,10 @@
                             <form action="/delete-task" method="post">
                                 <input type="hidden" value="{{task.id}}" name="id">
                                 <button type="submit" class="btn btn-outline-danger btn-sm">Eliminar</button>
+                            </form>
+                            <form action="/task-ok" method="post">
+                                <input type="hidden" value="{{task.ok}}" name="ok">
+                                <button type="submit" class="btn btn-outline btn-primary">Terminado</button>
                             </form>
                         </div>
                     </div>
