ok ruta clcik termianda tarea

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -43,7 +43,7 @@
                             </form>
                             <form action="/task-ok" method="post">
                                 <input type="hidden" value="{{task.ok}}" name="ok">
-                                <button type="submit" class="btn btn-outline btn-primary">Terminado</button>
+                                <button type="submit" class="btn btn-outline btn-primary">Ok</button>
                             </form>
                         </div>
                     </div>
